--- a/Home.html
+++ b/Home.html
@@ -169,7 +169,7 @@
     <h3>Explore <span>KOI</span> Products in Different Fields </h3>
     <div class="Drones_arrangement">
     <div class="drone_baner">
-      <img src="Images/Drone_baner_1.png" alt="drone_baner_image">
+      <img src="Images/Drone_baner1.png" alt="drone_baner_image">
       <div class="drone_baner_text">
       <h4>Video production</h4>
       <p>Tools for aerial and ground filmmaking at a <br> professional level.</p>
@@ -177,7 +177,7 @@
     </div>
     </div>
     <div class="drone_baner">
-      <img src="Images/Drone_baner_2.png" alt="drone_baner_image">
+      <img src="Images/Drone_baner2.png" alt="drone_baner_image">
       <div class="drone_baner_text">
       <h4>Enterprise</h4>
       <p>Innovative drone solutions tailored for the next <br> era of professional tasks.</p>
@@ -185,7 +185,7 @@
     </div>
     </div>
     <div class="drone_baner">
-      <img src="Images/Drone_baner_3.png" alt="drone_baner_image">
+      <img src="Images/Drone_baner3.png" alt="drone_baner_image">
       <div class="drone_baner_text">
       <h4>Agriculture</h4>
       <p> Effective Advanced and smart farming <br> solutions designed for efficiency and productivity. </p>
